Further toc alignment fixes.

--- a/_assets/stylesheets/_main-typography.scss
+++ b/_assets/stylesheets/_main-typography.scss
@@ -4,22 +4,24 @@
 %toc {
   margin-bottom: $line-double;
   font-size: 1.257rem;
-  padding: $line-single;
+  padding: $line-single $line-half;
   background-color: lighten($transparent-grey, 65%);
   border-radius: 2px;
   box-shadow: inset 0 0 1px darken($transparent-grey, 5%), 0 2px 3px $transparent-grey;
 
+  @include media($tablet) {
+    padding: $line-single;
+  }
+
   @include media($desktop) {
-    padding: 88px;
     column-count: 2;
-    column-gap: $line-double;
+    column-gap: $line-double * 2;
     column-width: auto;
   }
 
   li {
     list-style: none;
     margin-left: $line-single;
-    line-height: 2;
 
     @include media($tablet) {
       margin-left: 0;
